Verstion 1.6 - 
-Modified src and cal3 timescaling methods to have a randres option and to allow per-taxon anc.wt values

version 1.5 - 10/05/12
-New functions, cal3TimeScaling and bin_cal3TimeScaling, similar to SRC methods but different probability equations used, req div rates
-Modifications to SRC methods to work more like how cal3 calculates unobs evol history at each node
-Added function freqRat for estimating the per-interval sampling probability via the frequency ratio method of Foote and Raup (1996)
-Added function rootSplit, which finds most basal split among a set of taxa
-Added function timeLadderTree, which resolves polytomies according to order of appearance
-Added function reverseList, which takes a hierarchial list and reverses that hierarchial order
-fixed bug in binTimeData where extant taxa were returned as NA in the output timeList object
-Modified function compareNodeAges to allow multiple trees as input, for all nodes shared in common among all input trees
-Modification to diversity curve functions so plots are cut off before going past the Modern (time 0)
-Modification to avgtaxa equation used in simFossilTaxa_SRcond. See help file for details.
-Warning/Error Line added to timePaleoPhy in case phylogeny tips are not a character vector like they should be

version 1.4 - 06/17/12
-Added a CITATION file, accessible via citation("paleotree")
-Added randLiveHat option to sampleRanges which controls how the 'hats' of taxa still alive at the modern day are treated
-modified how timeData and timeList input were handled in various functions so that data.frames were converted to matrices
-Added count.cryptic argument to simFossilTaxa and simFossilTaxa_SRCond
-Fixed error where simFossilTaxa_SRCond treated anag.rate as prop.bifurc (and vice versa)
-Cleaning up of help files: fixing typos, weird line breaks, clarification

version 1.3 - 04/17/12