@@ -1,8 +1,11 @@
 Verstion 1.6 - 
+-Bug fixed in simFossilTaxa where some sets of conditions would sometimes produce an error in some runs (thanks Tiego Quental for the bug report!)
+-Bug fixed in using rand.obs argument in timePaleoPhy where timeData was recycled over many runs (thanks Roger Benson for the bug report!)
 -Modified src and cal3 timescaling methods to have a randres option and to allow per-taxon anc.wt values
+-Modified plotMultiDiv to allow plotting multiple diversity curves, by default as a crazy rainbow
 
 version 1.5 - 10/05/12
--New functions, cal3TimeScaling and bin_cal3TimeScaling, similar to SRC methods but different probability equations used, req div rates
+-New functions, cal3TimePaleoPhy and bin_cal3TimePaleoPhy, similar to SRC methods but different probability equations used, req div rates
 -Modifications to SRC methods to work more like how cal3 calculates unobs evol history at each node
 -Added function freqRat for estimating the per-interval sampling probability via the frequency ratio method of Foote and Raup (1996)
 -Added function rootSplit, which finds most basal split among a set of taxa
